[package]
name = "test_api"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "test_api"

[dependencies]
serde = { version = "1", features = ["derive"]}
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [ "runtime-actix-rustls", "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
